# statTools

./: CMakeLists.txt  Doxyfile  README.md  code_version.sh
doc/: INSTALL  stattools.1
src/: asymmetric_errors.f90  binom.f90  dice.f90  die.f90  error_propagation.f90  functions.f90  gauss.f90  lintpol.f90  poisson.f90  statistics.f90
